# NL-Bankstatement-converter

./: .gitignore  Statement_Converter.py  pyproject.toml
